--- a/config.json
+++ b/config.json
@@ -1,6 +1,7 @@
 {
   "name": "Vinicius Vasques",
   "job": "Student Software Engineer",
+  "banner": "https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80",
   "github": "vinivasq",
   "playlists": {
     "jogos": [
