--- a/config.json
+++ b/config.json
@@ -130,5 +130,12 @@
         "thumb": "https://img.youtube.com/vi/0JWMVc1CqpA/hqdefault.jpg"
       }
     ]
+  },
+  "favoritos": {
+    "user1": "@peas",
+    "user1github" : "peas",
+    "user2": "@omariosouto",
+    "user2github": "omariosouto"
   }
-}
+} 
+
